[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bug-triage-env"
version = "1.0.0"
description = "Bug Triage & Patch Validation RL environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
server = "bug_triage_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["bug_triage_env", "bug_triage_env.server"]
package-dir = { "bug_triage_env" = ".", "bug_triage_env.server" = "server" }
